# sister_share_shop

./: LICENSE  README.md  app.py  email_service.py  forms.py  models.py  pyproject.toml  replit.md  routes.py
instance/: donation_tracker.db
static/: style.css
templates/: admin_dashboard.html  base.html  browse_donations.html  donate_item.html  donor_portal.html  index.html  item_detail.html  login.html  register.html  request_item.html
